--- a/nginx.conf
+++ b/nginx.conf
@@ -7,13 +7,42 @@ http {
     server image_service2:3001;
   }
 
+  upstream user_service {
+    server user_service1:3002;
+    server user_service2:3002;
+  }
+
+  upstream auth_service {
+    server auth_service1:3003;
+    server auth_service2:3003;
+  }
+
 
 
   server {
     listen 80;
 
-    location / {
+    location /image {
+      rewrite ^/image(/.*)$ /v1/image$1 break;
       proxy_pass http://image_service;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /user {
+      rewrite ^/user(/.*)$ /v1/user$1 break;
+      proxy_pass http://user_service;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /auth {
+      rewrite ^/auth(/.*)$ /v1/auth$1 break;
+      proxy_pass http://auth_service;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
