--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,10 @@ http {
     server auth_service2:3003;
   }
 
+  upstream post_service {
+    server post_service1:3004;
+    server post_service2:3004;
+  }
 
 
   server {
@@ -25,6 +29,15 @@ http {
     location /image {
       rewrite ^/image(/.*)$ /v1/image$1 break;
       proxy_pass http://image_service;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /post {
+      rewrite ^/post(/.*)$ /v1/post$1 break;
+      proxy_pass http://post_service;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
