fix(nginxConfig): add /v1 prefix to url

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,8 +26,8 @@ http {
   server {
     listen 80;
 
-    location /image {
-      rewrite ^/image(/.*)$ /v1/image$1 break;
+    location /v1/image {
+      rewrite ^/v1/image(/.*)$ /v1/image$1 break;
       proxy_pass http://image_service;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -35,8 +35,8 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /post {
-      rewrite ^/post(/.*)$ /v1/post$1 break;
+    location /v1/post {
+      rewrite ^/v1/post(/.*)$ /v1/post$1 break;
       proxy_pass http://post_service;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -44,8 +44,8 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /user {
-      rewrite ^/user(/.*)$ /v1/user$1 break;
+    location /v1/user {
+      rewrite ^/v1/user(/.*)$ /v1/user$1 break;
       proxy_pass http://user_service;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -53,8 +53,8 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /auth {
-      rewrite ^/auth(/.*)$ /v1/auth$1 break;
+    location /v1/auth {
+      rewrite ^/v1/auth(/.*)$ /v1/auth$1 break;
       proxy_pass http://auth_service;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
