--- a/imageService/Dockerfile
+++ b/imageService/Dockerfile
@@ -4,9 +4,14 @@ FROM golang:latest AS build
 WORKDIR /app
 
 COPY library/ /app/library/
+COPY userProto/ /app/userProto/
+COPY imageProto/ /app/imageProto/
 COPY imageService/ .
+ENV GOPROXY https://proxy.golang.org
 
 RUN go mod edit -replace=github.com/GetterSethya/library=/app/library
+RUN go mod edit -replace=github.com/GetterSethya/userProto=/app/userProto
+RUN go mod edit -replace=github.com/GetterSethya/imageProto=/app/imageProto
 RUN go mod tidy
 RUN go mod download
 
