--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       instance: 1
       JWT_SECRET: ${JWT_SECRET}
       REFRESH_SECRET: ${REFRESH_SECRET}
+      PORT: 80
 
   image_service2:
     build:
@@ -56,6 +57,7 @@ services:
       instance: 2
       JWT_SECRET: ${JWT_SECRET}
       REFRESH_SECRET: ${REFRESH_SECRET}
+      PORT: 80
 
   user_service1:
     build:
