--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,8 @@ services:
       instance: 1
       JWT_SECRET: ${JWT_SECRET}
       REFRESH_SECRET: ${REFRESH_SECRET}
+      USER_SERVICE_HOSTNAME: "user_service"
+      IMAGE_SERVICE_HOSTNAME: "image_service"
       RABBITMQ_HOSTNAME: "rabbitmq"
     depends_on:
       rabbitmq:
@@ -84,6 +86,8 @@ services:
       instance: 2
       JWT_SECRET: ${JWT_SECRET}
       REFRESH_SECRET: ${REFRESH_SECRET}
+      USER_SERVICE_HOSTNAME: "user_service"
+      IMAGE_SERVICE_HOSTNAME: "image_service"
       RABBITMQ_HOSTNAME: "rabbitmq"
     depends_on:
       rabbitmq:
@@ -124,6 +128,7 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       REFRESH_SECRET: ${REFRESH_SECRET}
       USER_SERVICE_HOSTNAME: "user_service"
+      IMAGE_SERVICE_HOSTNAME: "image_service"
       RABBITMQ_HOSTNAME: "rabbitmq"
     depends_on:
       rabbitmq:
@@ -140,6 +145,7 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       REFRESH_SECRET: ${REFRESH_SECRET}
       USER_SERVICE_HOSTNAME: "user_service"
+      IMAGE_SERVICE_HOSTNAME: "image_service"
       RABBITMQ_HOSTNAME: "rabbitmq"
     depends_on:
       rabbitmq:
