fix: set client max body size to 10 MB

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@
 events {}
 
 http {
+  client_max_body_size 10M;
   upstream image_service {
     server image_service1:3001;
     server image_service2:3001;
