--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,11 @@ http {
     server post_service2:3004;
   }
 
+  upstream reply_service {
+    server reply_service1:3005;
+    server reply_service2:3005;
+  }
+
 
   server {
     listen 80;
@@ -57,6 +62,15 @@ http {
     location /v1/auth {
       rewrite ^/v1/auth(/.*)$ /v1/auth$1 break;
       proxy_pass http://auth_service;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /v1/reply {
+      rewrite ^/v1/reply(/.*)$ /v1/reply$1 break;
+      proxy_pass http://reply_service;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
