--- a/postService/Dockerfile
+++ b/postService/Dockerfile
@@ -7,12 +7,14 @@ WORKDIR /app
 COPY library/ /app/library/
 COPY userProto/ /app/userProto/
 COPY imageProto/ /app/imageProto/
+COPY postProto/ /app/postProto/
 COPY postService/ .
 ENV GOPROXY https://proxy.golang.org
 
 RUN go mod edit -replace=github.com/GetterSethya/library=/app/library
 RUN go mod edit -replace=github.com/GetterSethya/userProto=/app/userProto
 RUN go mod edit -replace=github.com/GetterSethya/imageProto=/app/imageProto
+RUN go mod edit -replace=github.com/GetterSethya/postProto=/app/postProto
 RUN go mod tidy
 RUN go mod download
 
