feat: add relations service

--- a/nginx.conf
+++ b/nginx.conf
@@ -28,9 +28,23 @@ http {
     server reply_service2:3005;
   }
 
+  upstream relation_service {
+    server relation_service1:3006;
+    server relation_service2:3006;
+
+  }
 
   server {
     listen 80;
+
+    location /v1/relation {
+      rewrite ^/v1/relation(/.*)$ /v1/relation$1 break;
+      proxy_pass http://relation_service;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
     location /v1/image {
       rewrite ^/v1/image(/.*)$ /v1/image$1 break;
