--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,9 @@ services:
       - post_service1
       - post_service2
 
+      - relation_service1
+      - relation_service2
+
   image_service1:
     build:
       context: .
@@ -180,6 +183,38 @@ services:
       REFRESH_SECRET: ${REFRESH_SECRET}
       USER_SERVICE_HOSTNAME: "user_service"
       POST_SERVICE_HOSTNAME: "post_service"
+      RABBITMQ_HOSTNAME: "rabbitmq"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+
+  relation_service1:
+    build:
+      context: .
+      dockerfile: /relationService/Dockerfile
+    volumes:
+      - dbStore:/app/data
+    environment:
+      instance: 1
+      JWT_SECRET: ${JWT_SECRET}
+      REFRESH_SECRET: ${REFRESH_SECRET}
+      USER_SERVICE_HOSTNAME: "user_service"
+      RABBITMQ_HOSTNAME: "rabbitmq"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+
+  relation_service2:
+    build:
+      context: .
+      dockerfile: /relationService/Dockerfile
+    volumes:
+      - dbStore:/app/data
+    environment:
+      instance: 2
+      JWT_SECRET: ${JWT_SECRET}
+      REFRESH_SECRET: ${REFRESH_SECRET}
+      USER_SERVICE_HOSTNAME: "user_service"
       RABBITMQ_HOSTNAME: "rabbitmq"
     depends_on:
       rabbitmq:
