--- a/web/package.json
+++ b/web/package.json
@@ -26,8 +26,11 @@
   },
   "dependencies": {
     "@types/node": "^20.13.0",
+    "clsx": "^2.1.1",
     "jose": "^5.4.0",
+    "lucide-svelte": "^0.408.0",
     "svelte-spa-router": "^4.0.1",
+    "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8"
   }
 }
