--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "paths": {
       "@lib/*": ["./src/lib/*"],
+      "@ui/*": ["./src/ui/*"],
       "@routes/*": ["./src/routes/*"]
     },
     "target": "ESNext",
