--- a/web/package.json
+++ b/web/package.json
@@ -25,12 +25,15 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "@felte/reporter-svelte": "^1.1.11",
+    "@felte/validator-zod": "^1.0.17",
     "@types/node": "^20.13.0",
     "clsx": "^2.1.1",
+    "felte": "^1.2.14",
     "jose": "^5.4.0",
     "lucide-svelte": "^0.408.0",
     "svelte-spa-router": "^4.0.1",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   }
 }
